test/functions/compilation-errors/error-stack-trace-recursive1.good
error-stack-trace-recursive1.chpl:1: In function 'h':
error-stack-trace-recursive1.chpl:3: error: Cannot assign to string from int(64)
error-stack-trace-recursive1.chpl:8: function 'h' called as h(arg: string) within function 'g'
error-stack-trace-recursive1.chpl:12: function 'g' called as g(arg: string)
